Add interactive topic network visualization with clustering
  - Add graph API router with topic network, cluster details, and stats endpoints
  - Implement K-means clustering script for topic discovery across standards
  - Create interactive React Flow graph visualization with filtering controls
  - Add lazy loading for heavy pages with loading states
  - Integrate scikit-learn and pandas for clustering analysis
  - Add slider UI component for similarity threshold adjustment
  - Include 620KB pre-computed graph data with cross-standard similarities
  - Improve sidebar layout transitions and add Topic Network navigation

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -34,6 +34,8 @@ multidict==6.6.4
 numpy==2.3.3
 orjson==3.11.3
 packaging==25.0
+pandas==2.3.3
+scikit-learn==1.7.2
 pillow==11.3.0
 portalocker==3.2.0
 propcache==0.3.2
