--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,9 +34,11 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.3",
     "remark-gfm": "^4.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
