--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@mermaid-js/mermaid-cli": "^11.12.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.13",
